--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.2.2",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
+    "@react-spring/web": "^9.7.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@uiball/loaders": "^1.3.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.0.3",
+    "next": "^15.2.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-confetti": "^6.4.0",
+    "react-countdown": "^2.3.5",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-use": "^17.5.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.17",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.4.35",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
