--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,19 @@
     "@heroicons/react": "^2.1.1",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@nivo/bar": "^0.84.0",
+    "@nivo/core": "^0.84.0",
+    "@nivo/line": "^0.84.0",
+    "@nivo/pie": "^0.84.0",
     "@react-spring/web": "^9.7.3",
     "@tailwindcss/forms": "^0.5.7",
     "@uiball/loaders": "^1.3.1",
     "clsx": "^2.1.1",
+    "cssesc": "^3.0.0",
+    "date-fns": "^3.3.1",
     "framer-motion": "^11.0.3",
-    "next": "^15.2.2",
+    "nanoid": "^5.1.5",
+    "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
@@ -28,11 +35,15 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-use": "^17.5.0",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "sass": "^1.86.0",
+    "tailwind": "^4.0.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
