--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit",
-    "postinstall": "npm run fix-deps",
-    "fix-deps": "npm install glob-parent fast-glob"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -41,10 +39,6 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.39.3",
     "@types/lodash": "^4.14.195",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
@@ -58,13 +52,9 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
-    "fast-glob": "^3.3.3",
-    "fastq": "^1.19.1",
     "framer-motion": "^11.0.8",
-    "glob-parent": "^6.0.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
-    "nanoid": "^5.1.5",
     "next": "^15.2.4",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
