--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@auth/core": "^0.37.0",
+    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/nextjs": "^6.12.12",
+    "@clerk/themes": "^2.2.26",
     "@convex-dev/auth": "^0.0.81",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
@@ -71,6 +74,7 @@
     "resend": "^4.2.0",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
+    "svix": "^1.63.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
